--- a/install
+++ b/install
@@ -1,31 +1,31 @@
 #!/usr/bin/env bash
 
-ln -sfn $HOME/.dotfiles/.bash_profile $HOME/.bash_profile
+ln -sfn .bash_profile $HOME/.bash_profile
 
-ln -sfn $HOME/.dotfiles/.bash_logout $HOME/.bash_logout
+ln -sfn .bash_logout $HOME/.bash_logout
 
-ln -sfn $HOME/.dotfiles/.bash_aliases $HOME/.bash_aliases
+ln -sfn .bash_aliases $HOME/.bash_aliases
 
-ln -sfn $HOME/.dotfiles/.bash_functions $HOME/.bash_functions
+ln -sfn .bash_functions $HOME/.bash_functions
 
-ln -sfn $HOME/.dotfiles/.zshrc $HOME/.zshrc
+ln -sfn .zshrc $HOME/.zshrc
 
-ln -sfn $HOME/.dotfiles/vim/gvimrc $HOME/.gvimrc
+ln -sfn vim/gvimrc $HOME/.gvimrc
 
-ln -sfn $HOME/.dotfiles/vim/vimrc $HOME/.vimrc
+ln -sfn vim/vimrc $HOME/.vimrc
 
-ln -sfn $HOME/.dotfiles/vim/ $HOME/.vim
+ln -sfn vim/ $HOME/.vim
 
-mkdir -p ~/.config && ln -sfn $HOME/.dotfiles/nvim/ $HOME/.config/nvim
+ln -sfn nvim/ $HOME/.config/nvim
 
-ln -sfn $HOME/.dotfiles/tmux/tmux.conf $HOME/.tmux.conf
+ln -sfn tmux/tmux.conf $HOME/.tmux.conf
 
-ln -sfn $HOME/.dotfiles/mysql/my.cnf $HOME/.my.cnf
+ln -sfn mysql/my.cnf $HOME/.my.cnf
 
-ln -sfn $HOME/.dotfiles/oh-my-zsh/ $HOME/.oh-my-zsh
+ln -sfn oh-my-zsh/ $HOME/.oh-my-zsh
 
-mkdir -p ~/.config && ln -sfn $HOME/.dotfiles/htop/ $HOME/.config/htop
+ln -sfn htop/ $HOME/.config/htop
 
-git config --global include.path ~/.dotfiles/gitconfig
+ln -sfn gitconfig/ $HOME/.gitconfig
 
-
+git config --global include.path $HOME/.gitconfig
