--- a/install
+++ b/install
@@ -12,15 +12,11 @@ ln -sfn $DOTFILES_DIR/.bash_profile $HOME/.bash_profile
 ln -sfn $DOTFILES_DIR/.bash_logout $HOME/.bash_logout
 ln -sfn $DOTFILES_DIR/.bash_aliases $HOME/.bash_aliases
 ln -sfn $DOTFILES_DIR/.bash_functions $HOME/.bash_functions
-ln -sfn $DOTFILES_DIR/.zshrc $HOME/.zshrc
 ln -sfn $DOTFILES_DIR/vim/gvimrc $HOME/.gvimrc
 ln -sfn $DOTFILES_DIR/vim/vimrc $HOME/.vimrc
 ln -sfn $DOTFILES_DIR/vim/ $HOME/.vim
 ln -sfn $DOTFILES_DIR/nvim/ $HOME/.config/nvim
-ln -sfn $DOTFILES_DIR/tmux/tmux.conf $HOME/.tmux.conf
-ln -sfn $DOTFILES_DIR/mysql/my.cnf $HOME/.my.cnf
-ln -sfn $DOTFILES_DIR/oh-my-zsh/ $HOME/.oh-my-zsh
+ln -sfn $DOTFILES_DIR/.tmux.conf $HOME/.tmux.conf
 ln -sfn $DOTFILES_DIR/htop/ $HOME/.config/htop
-ln -sfn $DOTFILES_DIR/.gitconfig/ $HOME/.gitconfig
-
+ln -sfn $DOTFILES_DIR/.gitconfig $HOME/.gitconfig
 git config --global include.path $HOME/.gitconfig
