--- a/install
+++ b/install
@@ -3,12 +3,13 @@
 if $CODESPACES;
 then
   DOTFILES_DIR=/workspaces/.codespaces/.persistedshare/dotfiles
+  cat $DOTFILES_DIR/.bash_profile >> $HOME/.bashrc
   cd $DOTFILES_DIR && git submodule init && git submodule update
 else
   DOTFILES_DIR=$HOME/.dotfiles
+  ln -sfn $DOTFILES_DIR/.bash_profile $HOME/.bash_profile
 fi
 
-ln -sfn $DOTFILES_DIR/.bash_profile $HOME/.bash_profile
 ln -sfn $DOTFILES_DIR/.bash_logout $HOME/.bash_logout
 ln -sfn $DOTFILES_DIR/.bash_aliases $HOME/.bash_aliases
 ln -sfn $DOTFILES_DIR/.bash_functions $HOME/.bash_functions
