--- a/install
+++ b/install
@@ -10,6 +10,8 @@ else
   ln -sfn $DOTFILES_DIR/.bash_profile $HOME/.bash_profile
 fi
 
+mkdir -p $HOME/.config
+
 ln -sfn $DOTFILES_DIR/.bash_logout $HOME/.bash_logout
 ln -sfn $DOTFILES_DIR/.bash_aliases $HOME/.bash_aliases
 ln -sfn $DOTFILES_DIR/.bash_functions $HOME/.bash_functions
@@ -18,9 +20,5 @@ ln -sfn $DOTFILES_DIR/.gitconfig $HOME/.gitconfig
 ln -sfn $DOTFILES_DIR/vim/gvimrc $HOME/.gvimrc
 ln -sfn $DOTFILES_DIR/vim/vimrc $HOME/.vimrc
 ln -sfn $DOTFILES_DIR/vim/ $HOME/.vim
-
-mkdir -p $HOME/.config/nvim
-ln -sfn $DOTFILES_DIR/nvim/ $HOME/.config/nvim
-
-mkdir -p $HOME/.config/htop
-ln -sfn $DOTFILES_DIR/htop/ $HOME/.config/htop
+ln -sfn $DOTFILES_DIR/nvim/ $HOME/.config
+ln -sfn $DOTFILES_DIR/htop/ $HOME/.config
